public/CSS/style.css
/* ... */
.positive-remaining-budget {
  color: var(--comp-color-three);
}

.negative-remaining-budget {
  color: var(--error-message);
}

.table-border {
  border-bottom: 1px solid var(--light-color);
}

.table-align-top {
  vertical-align: baseline;
}

.table-align-left {
  text-align: left;
}

.table-align-right {
  text-align: right;
}

.expense-date {
  font-size: 0.625rem;
  color: var(--muted-text-color);
}

/*----------*/
/* PROJEKTE */
/*----------*/

/* .project-btn {
  min-width: 7rem;
  min-height: 7rem;
  background-color: var(--dark-color);
  color: var(--main-text-color);
  border: none;
  border-radius: 15px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.5em;
  text-decoration: none;
  transition: transform 0.2s ease;
} */

.project-wrapper {
  width: 100%;
  display: grid;
  justify-content: center;
  flex-direction: column;
  gap: 1.5em;
  margin: 1.25em auto;
}

.todo-checkbox {
  position: absolute;
  width: 1.25rem;
  height: 1.25rem;
  opacity: 0;
}

 .checkbox-label {
  position: relative;
  cursor: pointer;
} 

.custom-checkbox {
  position: absolute;
  display: inline-block;
  width: 1.25rem;
  height: 1.25rem;
  border: 2px solid var(--main-text-color);
  background-color: transparent;
  border-radius: 5px;
  cursor: pointer;
}

.custom-checkbox::after {
  content: "";
  position: absolute;
  left: 0.4em;
  bottom: 0.2em;
  width: 0.6rem;
  height: 1.2rem;
  border: solid var(--comp-color-three);
  border-width: 0 0.2rem 0.2rem 0;
  transform: rotate(45deg);
  opacity: 0;
}

.todo-checkbox:checked + .custom-checkbox::after {
  width: 0.6rem;
  height: 1.2rem;
  opacity: 1;
}

.todo-checkbox:checked + .custom-checkbox {
  border: 2px solid var(--light-dark-color);
}

.todo-text {
  padding-left: 2em;
}

.completed {
  text-decoration:line-through;
  color: var(--light-dark-color);
}

/*--------*/
/* FOOTER */
/*--------*/

.footer-container {
  width: 100%;
  font-size: 0.875rem;
  text-align: center;
  padding: 4em 0 2em 0;
  color: var(--muted-text-color);
}

/*---------------*/
/* MEDIA QUERIES */
/*---------------*/

@media only screen and (max-width:374px) {
  .note-wrapper {
    max-width: 300px;
    max-height: 250px;
  }
}

@media only screen and (min-width:400px) {
  .home-btn {
    width: 8rem;
    height: 8rem;
  }
}

@media only screen and (min-width:640px) {
  .home-btn {
    width: 14rem;
    height: 14rem;
  }

  .home-container {
    gap: 4em;
  }

  .home-btn svg {
    width: 60px;
    height: 60px;
  }
}

@media only screen and (min-width:768px) {
  .notes-container {
    flex-direction: row;
    flex-wrap: wrap;
  }

  .note-wrapper {
    width: 300px;
    height: 300px;
  }

  .search-input {
    max-width: 50%;
  }
}

